# env-manager

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  shell-hook-plan.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
coverage/: clover.xml  coverage-final.json  index.html
coverage/src/: App.tsx.html  index.html  types.ts.html
coverage/src/components/: EnvironmentToggle.tsx.html  Onboarding.tsx.html  (+6 more)
docs/: story-1.md  story-2.md
landing/: index.html  releases.html
release/: CHANGELOG.md  RELEASE_NOTES.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/coverage/: clover.xml  index.html
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EnvironmentToggle.tsx  ExposureBadge.tsx  Onboarding.tsx  Settings.tsx  SettingsModal.tsx  ShellIntegration.tsx  Sidebar.tsx  VarDetail.tsx  VarList.tsx
src/hooks/: useExposureCheck.ts
src/lib/: envDiff.ts  envFile.ts  envFormats.ts  projectTree.ts
src/test/: App.test.tsx  DiffViewPanel.test.tsx  EnvExampleGeneratorPanel.test.tsx  EnvExamplePromptDialog.test.tsx  EnvironmentToggle.test.tsx  ExportPanel.test.tsx  ImportDialog.test.tsx  Onboarding.test.tsx  PushToStage.test.tsx  Settings.test.tsx  ShellIntegration.test.tsx  Sidebar.test.tsx  VarDetail.test.tsx  VarList.test.tsx  envDiff.test.ts  envExample.test.ts  envExampleGenerator.test.ts  envFile.test.ts  envFormats.test.ts  keyRename.test.ts  projectTree.test.ts  setup.ts  types.test.ts
(+29 files in other folders)
